--- a/sasprintpack/contact.html
+++ b/sasprintpack/contact.html
@@ -37,7 +37,7 @@
             <p class="company-name">SAS Print Pack © 2015 </p>
         </div>
         <div class="col-sm-6 col-md-4 footer-contacts-icon">
-            <div><span class="fa fa-map-marker footer-contacts-icon"></span><a href target="_blank"><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></a></div>
+            <div><span class="fa fa-map-marker footer-contacts-icon"></span><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></div>
             <div>
                 <p class="footer-center-info email text-left"><i class="fa fa-phone footer-contacts-icon"></i>+91 7020930721</p>
             </div>
