--- a/sasprintpack/index.html
+++ b/sasprintpack/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
-<body>
+<body  style="background-color: #b9c6b5;">
     <nav class="navbar navbar-light navbar-expand-md navigation-clean bg-dark">
-        <div class="container"><a class="navbar-brand" href="index.html" style="color: var(--light);">SAS Print Pack</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="background: var(--light);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container">
+            <a class="navbar-brand" href="index.html" style="color: var(--light);">SAS Print Pack</a>
+            <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="background: var(--light);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link text-info" href="index.html">Home</a></li>
@@ -29,27 +31,31 @@
         <section id="carousel">
             <div class="carousel slide" data-ride="carousel" id="carousel-1">
                 <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <div class="jumbotron pulse animated hero-technology carousel-hero">
-                            <h1 class="hero-title">SAS Print Pack</h1>
-                            <p class="hero-subtitle" style="background: rgba(248,249,250,0.58);color: var(--dark);">SAS Print Pack is a leading manufacturer and supplier of all types of printed Shopping and Packaging bags.<br></p>
-                            <p><a class="btn btn-primary hero-button plat js-scroll-trigger" role="button" href="#features">Learn more</a></p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="jumbotron pulse animated hero-technology carousel-hero">
-                            <h1 class="hero-title">SAS Print Pack</h1>
-                            <p class="hero-subtitle" style="background: rgba(248,249,250,0.58);color: var(--dark);">SAS Print Pack is a leading manufacturer and supplier of all types of printed Shopping and Packaging bags.<br></p>
-                            <p><a class="btn btn-primary hero-button plat js-scroll-trigger" role="button" href="#features">Learn more</a></p>
-                        </div>
-                    </div>
                     <div class="carousel-item active">
                         <div class="jumbotron pulse animated hero-technology carousel-hero">
-                            <h1 class="hero-title">SAS Print Pack</h1>
-                            <p class="hero-subtitle" style="background: rgba(248,249,250,0.58);color: var(--dark);">SAS Print Pack is a leading manufacturer and supplier of all types of printed Shopping and Packaging bags.<br></p>
-                            <p><a class="btn btn-primary hero-button plat js-scroll-trigger" role="button" href="#features">Learn more</a></p>
+                            <!--<h1 class="hero-title">SAS Print Pack</h1>
+                            <p class="hero-subtitle" style="background: rgba(248,249,250,0.58);color: var(--dark);">SAS Print Pack is a leading manufacturer and supplier of all types of printed Shopping and Packaging bags.<br></p>-->
+                            <p><br><br><br><br><br><br><br><br><br><br></p>
+                            <!--<p><a class="btn btn-primary hero-button plat js-scroll-trigger" role="button" href="#features">Learn more</a></p>-->
                         </div>
                     </div>
+                    <div class="carousel-item">
+                        <div class="jumbotron pulse animated hero-technology carousel-hero">
+                            <!--<h1 class="hero-title">SAS Print Pack</h1>
+                            <p class="hero-subtitle" style="background: rgba(248,249,250,0.58);color: var(--dark);">SAS Print Pack is a leading manufacturer and supplier of all types of printed Shopping and Packaging bags.<br></p>-->
+                            <p><br><br><br><br><br><br><br><br><br><br></p>
+                            <!--<p><a class="btn btn-primary hero-button plat js-scroll-trigger" role="button" href="#features">Learn more</a></p>-->
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="jumbotron pulse animated hero-technology carousel-hero">
+                            <!--<h1 class="hero-title">SAS Print Pack</h1>
+                            <p class="hero-subtitle" style="background: rgba(248,249,250,0.58);color: var(--dark);">SAS Print Pack is a leading manufacturer and supplier of all types of printed Shopping and Packaging bags.<br></p>-->
+                            <p><br><br><br><br><br><br><br><br><br><br></p>
+                            <!--<p><a class="btn btn-primary hero-button plat js-scroll-trigger" role="button" href="#features">Learn more</a></p>-->
+                        </div>
+                    </div>
+
                 </div>
                 <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><i class="fa fa-chevron-left"></i><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next"><i class="fa fa-chevron-right"></i><span class="sr-only">Next</span></a></div>
                 <ol class="carousel-indicators">
@@ -60,14 +66,14 @@
             </div>
         </section>
     </div>
-    <div class="features-clean">
+    <div class="features-clean"  style="background-color: #feffd9;">
         <div class="container" id="features">
             <div class="intro">
                 <p class="text-center"></p>
             </div>
             <p style="text-align: center;margin-right: 10%;margin-left: 10%;color: var(--dark);font-size: 37px;font-weight: 600;">Features</p>
             <p style="text-align: center;margin-right: 10%;margin-left: 10%;">&nbsp;We also came with some innovative ideas on manufacturing cotton bags. We are manufacturers of Non-Woven fabric bags, Cloth bags,Tetron bags, Coated fabric bags, Artificial leather bags, Tarpaulin bags. We can also make as per your suggestions/designs. Our aim is to provide quality products at a reasonable price. Our products are very economical and effective. We provide high-quality advertising material for you with our vast experience and interaction with different clients.We can assure you of timely delivery of your order.<br><br></p>
-            <div class="row features">
+            <div class="row features" >
                 <div class="col-sm-6 col-lg-4 item"><i class="fa fa-long-arrow-up icon"></i>
                     <h3 class="name">Long Lasting</h3>
                     <p class="description">Our bags are created with highest standards keeping long-life in mind.</p>
@@ -104,7 +110,7 @@
                 <p class="company-name">SAS Print Pack © 2015 </p>
             </div>
             <div class="col-sm-6 col-md-4 footer-contacts-icon">
-                <div><span class="fa fa-map-marker footer-contacts-icon"></span><a href target="_blank"><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></a></div>
+                <div><span class="fa fa-map-marker footer-contacts-icon"></span><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></div>
                 <div>
                     <p class="footer-center-info email text-left"><i class="fa fa-phone footer-contacts-icon"></i>+91 7020930721</p>
                 </div>
