--- a/sasprintpack/products.html
+++ b/sasprintpack/products.html
@@ -30,6 +30,7 @@
         <br>    
         <div id="carousel-example" class="carousel slide hidden-xs" data-ride="carousel">
             <!-- Wrapper for slides -->
+            <br>
             <div class="carousel-inner">
                 <div class="item">
                     <!--start of first row-->
@@ -161,6 +162,7 @@
                      
                     </div>
                 </div>
+                <br>
                 <div class="item">
                     <!--start of second row-->
                     <div class="row">
@@ -291,6 +293,7 @@
        
                     </div>
                 </div>
+                <br>
                 <div class="item">
                     <!--start of third row-->
                     <div class="row">
@@ -435,7 +438,7 @@
             <p class="company-name">SAS Print Pack © 2015 </p>
         </div>
         <div class="col-sm-6 col-md-4 footer-contacts-icon">
-            <div><span class="fa fa-map-marker footer-contacts-icon"></span><a href target="_blank"><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></a></div>
+            <div><span class="fa fa-map-marker footer-contacts-icon"></span><br />B20, R.K.Patel Nagar, <br />Opp. Hanuman Mandir,<br />Amalner, Maharashtra - 425401<br /><br /></div>
             <div>
                 <p class="footer-center-info email text-left"><i class="fa fa-phone footer-contacts-icon"></i>+91 7020930721</p>
             </div>
