--- a/sasprintpack/index.html
+++ b/sasprintpack/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="SAS Print Pack is a leading manufacturer and supplier of all types of Printed Shopping bags, Packaging bags, Non-Woven fabric bags, Cloth bags, Tetron bags, Coated fabric bags, Artificial leather bags, Tarpaulin bags.">
+    <meta name="keywords" content="Printed Shopping bags, Packaging bags, Non-Woven fabric bags, Cloth bags, Tetron bags, Coated fabric bags, Artificial leather bags, Tarpaulin bags.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>SAS Print Pack</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -71,7 +73,7 @@
             <div class="intro">
                 <p class="text-center"></p>
             </div>
-            <p style="text-align: center;margin-right: 10%;margin-left: 10%;color: var(--dark);font-size: 37px;font-weight: 600;">Features</p>
+            <h1></h1><p style="text-align: center;margin-right: 10%;margin-left: 10%;color: var(--dark);font-size: 37px;font-weight: 600;">Features</p></h1>
             <p style="text-align: center;margin-right: 10%;margin-left: 10%;">&nbsp;We also came with some innovative ideas on manufacturing cotton bags. We are manufacturers of Non-Woven fabric bags, Cloth bags,Tetron bags, Coated fabric bags, Artificial leather bags, Tarpaulin bags. We can also make as per your suggestions/designs. Our aim is to provide quality products at a reasonable price. Our products are very economical and effective. We provide high-quality advertising material for you with our vast experience and interaction with different clients.We can assure you of timely delivery of your order.<br><br></p>
             <div class="row features" >
                 <div class="col-sm-6 col-lg-4 item"><i class="fa fa-long-arrow-up icon"></i>
@@ -104,7 +106,7 @@
     <footer>
         <div class="row">
             <div class="col-sm-6 col-md-4 footer-navigation">
-                <img src="assets/img/saslogo.jpg" height="10%" width="10%">
+                <img src="assets/img/saslogo.jpg" height="10%" width="10%" alt="SAS Print Pack Logo">
                 <p class="links"><a href="index.html">Home</a><strong> · </strong><a href="products.html">Products</a><strong> · </strong><a href="contact.html">Contact</a><strong> · </strong></p>
                 <p class="links" style="font-weight: 400;"><strong> · </strong><a href="products.html#25kg_packaging_bag_5_1000">Cotton Toolkit Bag</a><br /><strong>· </strong><a href="products.html#brand_advertising_bag_5_5000">Canvas Bag</a><br /><strong>· </strong><a href="products.html#canvas_bag_10_500">Brand Advertising Bag</a><br /><strong>· </strong><a href="products.html#coated_cotton_bag_10_1000">Coated Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_bag_3_1000">Cotton Bag</a><br /><strong>· </strong><a href="products.html#cotton_grocery_bag_5_1000">Cotton Grocery Bag</a><br /><strong>· </strong><a href="products.html#cotton_paper_stand_20_500">Cotton Paper Stand</a><br /><strong>· </strong><a href="products.html#cotton_tarpoline_toolkit_bag_20_1000">Cotton Tarpoline Toolkit Bag</a><br /><strong>· </strong><a href="products.html#shopping_bag_5_3000">Shopping Bag</a><br /><strong>· </strong><a href="products.html#product_promotional_bag_5_3000">Promotional Bag</a><br /><br /><br /></p>
                 <p class="company-name">SAS Print Pack © 2015 </p>
