--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
   </head>
   <body>
     <section class="page-header">
-      <!--<a href="index.html">--><h1 class="project-name"> Adivardhan Maheshwari </h1>
-      <a href="/pythonclasses/enquiry.html"><h2 class="project-tagline">Register for Python Classes</h2></a>
-      <!--
-      <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
-      -->
+      <h1 class="project-name"> Adivardhan Maheshwari </h1>
+      
       <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
@@ -35,7 +31,7 @@
     <main id="content" class="main-content" role="main">
       <div style="font-size:30px" align="center">
       Software Development Engineer<br>
-      Python | IOT & Embedded Systems
+      Python| JAVA | SQL | IOT & Embedded Systems
         </div>
     </main>
     <section class="main-content">
