update page title

--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,7 @@
   </head>
   <body>
     <section class="page-header">
-      <!--<a href="index.html">--><h1 class="project-name"> Adivardhan Maheshwari </h1>
-      <h2 class="project-tagline">Website in development.</h2>
+      <!--<a href="index.html">--><h1 class="project-name">Contact</h1>
       <!--
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
