--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <section class="page-header">
-    <!--<a href="index.html">--><h1 class="project-name"> Adivardhan Maheshwari </h1>
+    <!--<a href="index.html">--><h1 class="project-name">Blogs</h1>
     <!--<h2 class="project-tagline">Website in development.</h2>
 
     <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
