--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"> Adivardhan Maheshwari </h1>
-      
+      <img src="images/Adivardhan.png" align="center"><br>
       <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
