optimise for mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <section class="page-header">
-      <img src="images/Adivardhan.png" align="center"><br>
+      <img src="images/Adivardhan.png" align="center" width="100%"><br>
       <a href="/index.html" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
