convert education.md to html, reformat url for different pages

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
       -->
-      <a href="/index.html" class="btn">Home</a>
+      <a href="/" class="btn">Home</a>
       <a href="/education/index" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
       <a href="/blog.html" class="btn">Blogs</a>
