--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <body>
     <section class="page-header">
       <img src="images/Adivardhan.png" align="center" width="100%"><br>
-      <a href="/index.html" class="btn">Home</a>
-      <a href="/education/index" class="btn">Education</a>
+      <a href="/" class="btn">Home</a>
+      <a href="/education.html" class="btn">Education</a>
       <a href="/projects/index" class="btn">Projects</a>
       <a href="/blog.html" class="btn">Blogs</a>
-      <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
+      <a href="/contact.html" class="btn">Contact Me</a>
     </section>
     <main id="content" class="main-content" role="main">
       <div style="font-size:30px" align="center">
