--- a/blog.html
+++ b/blog.html
@@ -25,17 +25,17 @@
 </head>
 <body>
 <section class="page-header">
-    <!--<a href="index.html">--><h1 class="project-name">Blogs</h1>
+    <img src="images/Blogs.svg" align="center" width="100%"><br>
     <!--<h2 class="project-tagline">Website in development.</h2>
 
     <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
     <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
     -->
-    <a href="/index.html" class="btn">Home</a>
-    <a href="/education/index" class="btn">Education</a>
-    <a href="/projects/index" class="btn">Projects</a>
-    <a href="/blog.html" class="btn">Blogs</a>
-    <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
+    <a href="/" class="btn">Home</a>
+    <a href="/education.html" class="btn">Education</a>
+    <a href="/projects.html" class="btn">Projects</a>
+    <a href="/blogs.html" class="btn">Blogs</a>
+    <a href="/contact.html" class="btn">Contact Me</a>
 </section>
 <div id="medium-widget"></div>
 <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
