--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,16 @@
   </head>
   <body>
     <section class="page-header">
-      <!--<a href="index.html">--><h1 class="project-name">Contact</h1>
+      <img src="images/Contact.svg" align="center" width="100%"><br>
       <!--
       <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
       -->
       <a href="/" class="btn">Home</a>
-      <a href="/education/index" class="btn">Education</a>
-      <a href="/projects/index" class="btn">Projects</a>
-      <a href="/blog.html" class="btn">Blogs</a>
+    <a href="/education.html" class="btn">Education</a>
+    <a href="/projects.html" class="btn">Projects</a>
+    <a href="/blogs.html" class="btn">Blogs</a>
+    <a href="/contact.html" class="btn">Contact Me</a>
       <a href="https://www.adivardhan.tech/contact.html" class="btn">Contact Me</a>
     </section>
         <form
