--- a/education.html
+++ b/education.html
@@ -94,7 +94,7 @@
 
         <h2 id="secondary-school-certificate-90">Secondary School Certificate (90%)</h2>
         <blockquote>
-            <h3 id="st-mary-english-medium-high-school-nagpur">St. Mary English Medium High School, Nagpur</h3>
+            <h3 id="st-mary-english-medium-high-school-nagpur">St. Mary English Medium High School, Amalner</h3>
             <h4 id="2002-2015">2002-2015</h4>
         </blockquote>
         <footer class="site-footer">
