--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   <main id="content" class="main-content" role="main">
     <div style="font-size:30px" align="center">
       Software Development Engineer<br>
-      Python| JAVA | SQL | IOT & Embedded Systems
+      Python | VueJS | JAVA | SQL | AWS <br>
+      IOT & Embedded Systems
     </div>
   </main>
   <section class="main-content">
