replace pixelpoint with taggbox widget

--- a/blogs.html
+++ b/blogs.html
@@ -25,18 +25,7 @@
     <a href="/blogs.html" class="btn">Blogs</a>
     <a href="/contact.html" class="btn">Contact Me</a>
 </section>
-<div id="medium-widget"></div>
-<script src="https://medium-widget.pixelpoint.io/widget.js"></script>
-<script>MediumWidget.Init({renderTo: '#medium-widget',
-    params: {
-        "resource": "https://medium.com/@adivardhan",
-        "postsPerLine": 1,
-        "limit": 10,
-        "picture": "small",
-        "fields": ["description", "author", "claps", "likes", "publishAt"],
-        "ratio": "original"
-    }
-})</script>
+<iframe src="https://widget.taggbox.com/113952" style="width:100%;height:600px;border:none;"></iframe>
 
 <section class="main-content">
 
