update education. remove redundant code

--- a/education.html
+++ b/education.html
@@ -43,6 +43,11 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+        <h2 id="masc">Masters of Applied Science in Information Systems Security Engineering</h2>
+        <blockquote>
+            <h3 id="shri-ramdeobaba-college-of-engineering-and-management-nagpur-wwwrknecedu">Concordia University, Montreal, Canada <br> <a href="https://www.concordia.ca">www.concordia.ca</a></h3>
+            <h4 id="2017-2021">Fall 2022-present</h4>
+        </blockquote>
         <h2 id="be-in-electronics-and-communication-cgpa-827">BE in Electronics and Communication (C.G.P.A: 8.27)</h2>
         <blockquote>
             <h3 id="shri-ramdeobaba-college-of-engineering-and-management-nagpur-wwwrknecedu">Shri Ramdeobaba College of
