--- a/blogs.html
+++ b/blogs.html
@@ -51,7 +51,7 @@
 
 <body>
     <section class="page-header">
-        <img src="images/Blogs.svg" align="center" width="100%"><br>
+        <img src="images/Blogs.svg" alt="Blog" align="center" width="100%"><br>
         <!--<h2 class="project-tagline">Website in development.</h2>
 
     <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
