--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
   <!--<a id="skip-to-content" href="#content">Skip to Main Content</a>-->
 
   <header class="page-header" role="banner">
-    <img src="images/Projects.svg" align="center" width="100%"><br>
+    <img src="images/Projects.svg" alt="Projects" align="center" width="100%"><br>
     <!--<h2 class="project-tagline">
             About Me</h2>-->
 
