--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
 <body>
   <section class="page-header">
-    <img src="images/Contact.svg" align="center" width="100%"><br>
+    <img src="images/Contact.svg" alt="Contact" align="center" width="100%"><br>
     <a href="/" class="btn">Home</a>
     <a href="/education.html" class="btn">Education</a>
     <a href="/projects.html" class="btn">Projects</a>
