--- a/education.html
+++ b/education.html
@@ -34,7 +34,7 @@
 
 <body>
     <header class="page-header" role="banner">
-        <img src="images/Education.svg" align="center" width="100%"><br>
+        <img src="images/Education.svg" alt="Education" align="center" width="100%"><br>
         <a href="/" class="btn">Home</a>
         <a href="/education.html" class="btn">Education</a>
         <a href="/projects.html" class="btn">Projects</a>
