--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <section class="page-header">
-    <img src="images/Adivardhan.svg" align="center" width="100%"><br>
+    <img src="images/Adivardhan.svg" align="center" alt="Adivardhan Maheshwari" width="100%"><br>
     <a href="/" class="btn">Home</a>
     <a href="/education.html" class="btn">Education</a>
     <a href="/projects.html" class="btn">Projects</a>
