--- a/tech2thepoint.html
+++ b/tech2thepoint.html
@@ -1,21 +1,67 @@
-Welcome to Tech2ThePoint! We are a professional tutoring and freelancing service that offers personalized academic coaching and software development solutions to help you succeed in your studies or business. With over 5 years of experience, we have helped numerous students and businesses of all ages and backgrounds achieve their academic and development goals.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Tech2ThePoint</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<header>
+		<h1>Welcome to Tech2ThePoint</h1>
+		<nav>
+			<ul>
+				<li><a href="#tutoring">Tutoring Services</a></li>
+				<li><a href="#freelancing">Freelancing Services</a></li>
+				<li><a href="#contact">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
+    <main>
+	<section id="tutoring">
+		<h2>Tutoring Services</h2>
+		<p>Our team of expert tutors offer personalized academic coaching in the following subjects:</p>
+		<ul>
+			<li>Python programming: Basic to advanced</li>
+			<li>Data science</li>
+			<li>Computer science courses for school, high school, and undergraduate students</li>
+			<li>AP Computer science principles</li>
+			<li>Computer programming: JavaScript, JAVA</li>
+			<li>Math for school, high school, and undergraduate students</li>
+		</ul>
+		<p>We offer both online and in-person tutoring sessions in Montreal, and our rates start at 29$/hour.</p>
+	</section>
 
-Our team of expert tutors and freelancers is highly qualified and experienced in their respective fields. We offer tutoring in a wide range of subjects, including:
-Python programming: Basic to advanced
-Data science
-Computer science courses for school, high school, and undergraduate students
-AP Computer science principles
-Computer programming: JavaScript, JAVA
-Math for school, high school, and undergraduate students
+	<section id="freelancing">
+		<h2>Freelancing Services</h2>
+		<p>Our team of experienced developers can help you build, design, and implement software solutions to fit your unique business needs. Our freelancing services include:</p>
+		<ul>
+			<li>Software development</li>
+			<li>Web development</li>
+			<li>Mobile app development</li>
+			<li>Database design and management</li>
+		</ul>
+		<p>Contact us today for a customized quote.</p>
+	</section>
 
-In addition to tutoring services, we also offer freelancing opportunities in software development. Our team of experienced developers can help you build, design, and implement software solutions to fit your unique business needs.
+	<section id="contact">
+		<h2>Contact Us</h2>
+		<p>If you have any questions or would like to schedule a free consultation, please fill out the form below and we'll get back to you as soon as possible.</p>
+		<form>
+			<label for="name">Name:</label>
+			<input type="text" id="name" name="name"><br><br>
 
-At Tech2ThePoint, we believe in maintaining academic integrity and ethical practices. Our tutoring services and software development solutions are designed to help students gain a deeper understanding of the subjects they are studying and to assist businesses in developing the technology solutions necessary to succeed in their industries. Our freelancing services are focused on providing high-quality software development solutions to businesses.
+			<label for="email">Email:</label>
+			<input type="email" id="email" name="email"><br><br>
 
-We do not condone academic dishonesty or plagiarism in any form. We do not provide students with completed assignments, essays, or other materials that could be submitted as their own work. Our tutoring services are focused on providing guidance, support, and assistance to students as they work to master the concepts and skills required in their coursework. 
+			<label for="message">Message:</label><br>
+			<textarea id="message" name="message" rows="5" cols="50"></textarea><br><br>
 
-If your tutoring needs or development requirements fall outside our area of expertise, we can still help! We have a network of highly qualified tutors and freelancers who specialize in various subjects and technologies. We can help match you with a tutor or freelancer who can provide the specialized help you need.
+			<input type="submit" value="Submit">
+		</form>
+	</section>
+</main>
 
-Our tutoring sessions and development solutions are available both online and in-person in Montreal, and we offer flexible scheduling to fit your busy schedule. We charge a competitive rate of 29$/hour for tutoring services and offer customized quotes for our freelancing services.
-
-If you're looking for expert academic coaching or software development solutions to help you achieve your full potential, while maintaining academic integrity and high-quality standards, look no further than Tech2ThePoint. Contact us today to schedule your free consultation and take the first step towards academic and business success.
+<footer>
+	<p>&copy; 2023 Tech2ThePoint. All rights reserved.</p>
+</footer>
+</body>
+</html>
