--- a/tech2thepoint.html
+++ b/tech2thepoint.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Tech2ThePoint</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/tech2thepoint.css">
 </head>
 <body>
 	<header>
@@ -43,21 +43,11 @@
 	</section>
 
 	<section id="contact">
-		<h2>Contact Us</h2>
-		<p>If you have any questions or would like to schedule a free consultation, please fill out the form below and we'll get back to you as soon as possible.</p>
-		<form>
-			<label for="name">Name:</label>
-			<input type="text" id="name" name="name"><br><br>
-
-			<label for="email">Email:</label>
-			<input type="email" id="email" name="email"><br><br>
-
-			<label for="message">Message:</label><br>
-			<textarea id="message" name="message" rows="5" cols="50"></textarea><br><br>
-
-			<input type="submit" value="Submit">
-		</form>
-	</section>
+        <h2>Contact Us</h2>
+        <p>To learn more about our services or to schedule a tutoring session or software development consultation, please email us at:</p>
+        <a href="mailto:tech2thepoint@adivardhan.tech">tech2thepoint@adivardhan.tech</a>
+      </section>
+      
 </main>
 
 <footer>
