--- a/tech2thepoint.html
+++ b/tech2thepoint.html
@@ -1,57 +1,97 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Tech2ThePoint</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/tech2thepoint.css">
+    <title>Tech2ThePoint</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/tech2thepoint.css">
 </head>
+
 <body>
-	<header>
-		<h1>Welcome to Tech2ThePoint</h1>
-		<nav>
-			<ul>
-				<li><a href="#tutoring">Tutoring Services</a></li>
-				<li><a href="#freelancing">Freelancing Services</a></li>
-				<li><a href="#contact">Contact Us</a></li>
-			</ul>
-		</nav>
-	</header>
-    <main>
-	<section id="tutoring">
-		<h2>Tutoring Services</h2>
-		<p>Our team of expert tutors offer personalized academic coaching in the following subjects:</p>
-		<ul>
-			<li>Python programming: Basic to advanced</li>
-			<li>Data science</li>
-			<li>Computer science courses for school, high school, and undergraduate students</li>
-			<li>AP Computer science principles</li>
-			<li>Computer programming: JavaScript, JAVA</li>
-			<li>Math for school, high school, and undergraduate students</li>
-		</ul>
-		<p>We offer both online and in-person tutoring sessions in Montreal, and our rates start at 29$/hour.</p>
-	</section>
+    <header>
+        <h1>Welcome to Tech2ThePoint!</h1>
+        <p>We are a professional tutoring and freelancing service that offers personalized academic coaching and
+            software development solutions to help you succeed in your studies or business. With over 5 years of
+            experience, we have helped numerous students and businesses of all ages and backgrounds achieve their
+            academic and development goals.</p>
+        <nav>
+            <ul>
+                <li><a href="#tutoring">Tutoring Services</a></li>
+                <li><a href="#freelancing">Freelancing Services</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <section id="tutoring">
+            <h2>Tutoring Services</h2>
+            <p>Our team of expert tutors and freelancers is highly qualified and experienced in their respective fields.
+                We
+                offer tutoring in a wide range of subjects, including:</p>
+            <ul>
+                <li>Python programming: Basic to advanced</li>
+                <li>Data science</li>
+                <li>Computer science courses for school, high school, and undergraduate students</li>
+                <li>AP Computer science principles</li>
+                <li>Computer programming: JavaScript, JAVA</li>
+                <li>Math for school, high school, and undergraduate students</li>
+            </ul>
+            <p>We offer both online and in-person tutoring sessions in Montreal, and our rates start at 29$/hour.</p>
+            <p>If your tutoring needs or development requirements fall outside our area of expertise, we can still help!
+                We
+                have a network of highly qualified tutors and freelancers who specialize in various subjects and
+                technologies. We can help match you with a tutor or freelancer who can provide the specialized help you
+                need.</p>
+        </section>
+        <section id="freelancing">
+            <p>In addition to tutoring services, we also offer freelancing opportunities in software development. Our
+                team
+                of experienced developers can help you build, design, and implement software solutions to fit your
+                unique
+                business needs.</p>
+            <h2>Freelancing Services</h2>
+            <p>Our team of experienced developers can help you build, design, and implement software solutions to fit
+                your unique business needs. Our freelancing services include:</p>
+            <ul>
+                <li>Software development</li>
+                <li>Web development</li>
+                <li>Mobile app development</li>
+                <li>Database design and management</li>
+            </ul>
+            <p>Contact us today for a customized quote.</p>
+        </section>
+    </section>
 
-	<section id="freelancing">
-		<h2>Freelancing Services</h2>
-		<p>Our team of experienced developers can help you build, design, and implement software solutions to fit your unique business needs. Our freelancing services include:</p>
-		<ul>
-			<li>Software development</li>
-			<li>Web development</li>
-			<li>Mobile app development</li>
-			<li>Database design and management</li>
-		</ul>
-		<p>Contact us today for a customized quote.</p>
-	</section>
 
-	<section id="contact">
+
+    <section>
+        <h2>Our Values</h2>
+        <p>At Tech2ThePoint, we believe in maintaining academic integrity and ethical practices. We do not condone
+            academic dishonesty or plagiarism in any form. We do not provide students with completed
+            assignments, essays, or other materials that could be submitted as their own work. Our tutoring services are
+            focused on providing guidance, support, and assistance to students as they work to master the concepts and
+            skills required in their coursework.</p>
+    </section>
+
+    <section>
+        <h2>Our Pricing and Availability</h2>
+        <p>Our tutoring sessions and development solutions are available both online and in-person in Montreal, and we
+            offer flexible scheduling to fit your busy schedule. We charge a competitive rate of 29$/hour for tutoring
+            services and offer customized quotes for our freelancing services.</p>
+    </section>
+
+
+    <section id="contact">
         <h2>Contact Us</h2>
-        <p>To learn more about our services or to schedule a tutoring session or software development consultation, please email us at:</p>
+        <p>To learn more about our services or to schedule a tutoring session or software development consultation,
+            please email us at:</p>
         <a href="mailto:tech2thepoint@adivardhan.tech">tech2thepoint@adivardhan.tech</a>
-      </section>
-      
-</main>
+    </section>
 
-<footer>
-	<p>&copy; 2023 Tech2ThePoint. All rights reserved.</p>
-</footer>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Tech2ThePoint. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
