--- a/tech2thepoint.html
+++ b/tech2thepoint.html
@@ -9,10 +9,6 @@
 <body>
     <header>
         <h1>Welcome to Tech2ThePoint!</h1>
-        <p>We are a professional tutoring and freelancing service that offers personalized academic coaching and
-            software development solutions to help you succeed in your studies or business. With over 5 years of
-            experience, we have helped numerous students and businesses of all ages and backgrounds achieve their
-            academic and development goals.</p>
         <nav>
             <ul>
                 <li><a href="#tutoring">Tutoring Services</a></li>
@@ -22,43 +18,48 @@
         </nav>
     </header>
     <section>
-        <section id="tutoring">
-            <h2>Tutoring Services</h2>
-            <p>Our team of expert tutors and freelancers is highly qualified and experienced in their respective fields.
-                We
-                offer tutoring in a wide range of subjects, including:</p>
-            <ul>
-                <li>Python programming: Basic to advanced</li>
-                <li>Data science</li>
-                <li>Computer science courses for school, high school, and undergraduate students</li>
-                <li>AP Computer science principles</li>
-                <li>Computer programming: JavaScript, JAVA</li>
-                <li>Math for school, high school, and undergraduate students</li>
-            </ul>
-            <p>We offer both online and in-person tutoring sessions in Montreal, and our rates start at 29$/hour.</p>
-            <p>If your tutoring needs or development requirements fall outside our area of expertise, we can still help!
-                We
-                have a network of highly qualified tutors and freelancers who specialize in various subjects and
-                technologies. We can help match you with a tutor or freelancer who can provide the specialized help you
-                need.</p>
-        </section>
-        <section id="freelancing">
-            <p>In addition to tutoring services, we also offer freelancing opportunities in software development. Our
-                team
-                of experienced developers can help you build, design, and implement software solutions to fit your
-                unique
-                business needs.</p>
-            <h2>Freelancing Services</h2>
-            <p>Our team of experienced developers can help you build, design, and implement software solutions to fit
-                your unique business needs. Our freelancing services include:</p>
-            <ul>
-                <li>Software development</li>
-                <li>Web development</li>
-                <li>Mobile app development</li>
-                <li>Database design and management</li>
-            </ul>
-            <p>Contact us today for a customized quote.</p>
-        </section>
+        <p>We are a professional tutoring and freelancing service that offers personalized academic coaching and
+            software development solutions to help you succeed in your studies or business. With over 5 years of
+            experience, we have helped numerous students and businesses of all ages and backgrounds achieve their
+            academic and development goals.
+        </p>
+    </section> 
+    <section id="tutoring">
+        <h2>Tutoring Services</h2>
+        <p>Our team of expert tutors and freelancers is highly qualified and experienced in their respective fields.
+            We
+            offer tutoring in a wide range of subjects, including:</p>
+        <ul>
+            <li>Python programming: Basic to advanced</li>
+            <li>Data science</li>
+            <li>Computer science courses for school, high school, and undergraduate students</li>
+            <li>AP Computer science principles</li>
+            <li>Computer programming: JavaScript, JAVA</li>
+            <li>Math for school, high school, and undergraduate students</li>
+        </ul>
+        <p>We offer both online and in-person tutoring sessions in Montreal, and our rates start at 29$/hour.</p>
+        <p>If your tutoring needs or development requirements fall outside our area of expertise, we can still help!
+            We
+            have a network of highly qualified tutors and freelancers who specialize in various subjects and
+            technologies. We can help match you with a tutor or freelancer who can provide the specialized help you
+            need.</p>
+    </section>
+    <section id="freelancing">
+        <p>In addition to tutoring services, we also offer freelancing opportunities in software development. Our
+            team
+            of experienced developers can help you build, design, and implement software solutions to fit your
+            unique
+            business needs.</p>
+        <h2>Freelancing Services</h2>
+        <p>Our team of experienced developers can help you build, design, and implement software solutions to fit
+            your unique business needs. Our freelancing services include:</p>
+        <ul>
+            <li>Software development</li>
+            <li>Web development</li>
+            <li>Mobile app development</li>
+            <li>Database design and management</li>
+        </ul>
+        <p>Contact us today for a customized quote.</p>
     </section>
 
 
