--- a/tech2thepoint.html
+++ b/tech2thepoint.html
@@ -4,6 +4,7 @@
 <head>
     <title>Tech2ThePoint</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/tech2thepoint.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/tech2thepoint/profile.png" />
 </head>
 
 <body>
