--- a/tech2thepoint.html
+++ b/tech2thepoint.html
@@ -10,7 +10,7 @@
 <body>
     <div class="banner">
         <!--<img src="assets/tech2thepoint/banner.png" alt="tech2thepoint banner image">-->
-        <h1>Welcome to Tech2ThePoint!</h1>
+        <h1><p align="center">Welcome to Tech2ThePoint!</h1>
         <nav>
             <ul>
                 <li><a href="#tutoring">Tutoring Services</a></li>
@@ -83,7 +83,7 @@
     </section>
 
 
-        <p align="center" id="contact"><iframe width="100%" height="880px"
+    <p align="center" id="contact"><iframe width="100%" height="880px"
             src="https://forms.office.com/Pages/ResponsePage.aspx?id=BkLTzEVnUkKFBskQmbf7ON8u8clH3w9Ply3hwdZO-x9URFYzQ0RVTEJQMEtBN0FZUkc3VFhZNEJWUy4u&embed=true"
             frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh"
             allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe></p>
