--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <a href="/contact.html" class="btn">Contact Me</a>
   </section>
   <main id="content" class="main-content" role="main">
-    <h4>Last Modified: 13th Feb, 2023</h4>
+    <h4>Last Modified: 10th May, 2023</h4>
 
-    <p>Hello, I am Adivardhan Maheshwari. This is my personal website.</p>
+    <p>Hello, I am Adivardhan Maheshwari. This is my personal website. I've decided to remove all analytics as I value the privacy of my visitors. However, I appreciate knowing when someone has visited my website. So, I'm working on adding a 'like' button that will act as a simple counter. This will only be visible to YOU and if you choose to click it, I will someone out there visited my site. Stay tuned for the update!</p>
     
     <p><em style="font-size: 15px;">(Sept, 2022-present)</em><br>I am pursuing my Masters in Informaton Systems Security Engineering at Concordia University. I am currently part of the <a href="https://madiba.encs.concordia.ca/">MADIBA Security Research Group</a> and co-supervised by <a href="https://users.encs.concordia.ca/~mmannan/">Dr. M. Mannan </a> and <a href="https://users.encs.concordia.ca/~youssef/">Dr. A. Youssef</a>.<br>In the past few months, I have been exposed to a wide-set of tools used for security and privacy analysis not limited to Burp-Suite, mitmproxy, jadx, GenyMotion, Triage, Mob-SF, wireshark.</p>
 
