--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
       Developer at Principal Global Services, India. I got great hands-on expereince on a wide set of tools and
       technologies like VueJS, JAVA, SQL, AWS, CI/CD, Github Actions, Sentry, Pagerduty and many more. This gave me an
       holistic understanding of the products are developed and integrated with other products and technologies and
-      everything around it.
+      everything around it.<br>
 
       My main job-role revolved around developing features in VueJS but it was not limited to just that. This job was my
-      first time for many dev things.
+      first time for many dev things. <br>
 
       I worked as a code owner for a couple of repositories. This gave me an amazing opportunity to work with PRs,
-      maintain repos, clean-up issues and actively get acquainted with code in different repos.
+      maintain repos, clean-up issues and actively get acquainted with code in different repos. <br>
 
       Well, I couldn't find work to put my Python skills to use so I found opportunies where I could use them. I wrote
       an automation script(in Python) that drastically reduced the manual effort by 95% when performing database
       procedures
-      clean-up.
+      clean-up. <br>
 
       I also had an amazing opportunity to participate in <a
         hre="https://technology.principal.com/blog/cloudathon-success-stories">Principal AWS cloudathon</a> where we
@@ -57,7 +57,7 @@
       Identifiable Information on-the-fly whenever new data is uploaded to S3 bucket. This gave me exposure to using
       various AWS products(EC2, Lambda, AthenaDB, S3, AWS CLI, Cloud 9) and linking them. (Noob tip: Use cloud 9 when
       deploying code and running scripts and don't want to deal with network restrictions.) Guess what - Most of it was
-      in Python cuz why not!(and also because it was a POC) :)
+      in Python cuz why not!(and also because it was a POC) :) <br>
     </p>
   </main>
   <section class="main-content">
