--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       My main job-role revolved around developing features in VueJS but it was not limited to just that. This job was my
       first time for many dev things. <br>
 
+      I also had the opportunity to work on a centralized customizable Github Actions process that would be called up by
+      individual repositories. I also had an opportunity to setup alarms in Github actions that would send alarms and
+      notifications to seperate MS Teams channels as per defined requirement. Great hands-on exercise to actaully
+      understand APIs.
+
       I worked as a code owner for a couple of repositories. This gave me an amazing opportunity to work with PRs,
       maintain repos, clean-up issues and actively get acquainted with code in different repos. <br>
 
