--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <p>Hello, I am Adivardhan Maheshwari. This is my personal website. I've decided to remove all analytics as I value
       the privacy of my visitors. However, I appreciate knowing when someone has visited my website. So, I'm working on
       adding a 'like' button that will act as a simple counter. This will only be visible to YOU and if you choose to
-      click it, I will someone out there visited my site. Stay tuned for the update!</p>
+      click it, I will know someone out there visited my site. Stay tuned for the update!</p>
 
     <p><em style="font-size: 15px;">(Sept, 2022-present)</em><br>I am pursuing my Masters in Informaton Systems Security
       Engineering at Concordia University. I am currently part of the <a href="https://madiba.encs.concordia.ca/">MADIBA
         Security Research Group</a> and co-supervised by <a href="https://users.encs.concordia.ca/~mmannan/">Dr. M.
         Mannan </a> and <a href="https://users.encs.concordia.ca/~youssef/">Dr. A. Youssef</a>.<br>In the past few
       months, I have been exposed to a wide-set of tools used for security and privacy analysis not limited to
-      Burp-Suite, mitmproxy, jadx, GenyMotion, Triage, Mob-SF, wireshark.</p>
+      Burp-Suite, MITM proxy, jadX, GenyMotion, Triage, Mob-SF, wireshark.</p>
 
     <p><em style="font-size: 15px;">(Jan, 2021-Aug, 2022)</em><br>Before starting my Masters, I worked as a Full-Stack
       Developer at Principal Global Services, India. I got great hands-on expereince on a wide set of tools and
