Update coursework link

--- a/education.html
+++ b/education.html
@@ -50,7 +50,7 @@
             <h4 id="2017-2021">2017-2021</h4>
             <blockquote>
                 <h3 id="complete-course-details"><a
-                        href="http://rknec.edu/Academics/Syllabus/2017-18/BE%20Electronic%20&amp;%20Comunication-Course%20Book%202017%20(2017%20-%2021)1.pdf">Complete
+                        href="./assets/BE Electronic and Comunication 2016.pdf">Complete
                         course details</a></h3>
             </blockquote>
         </blockquote>
