--- a/education.html
+++ b/education.html
@@ -40,33 +40,66 @@
     <main id="content" class="main-content" role="main">
         <h2 id="masc">Masters of Applied Science in Information Systems Security Engineering</h2>
         <blockquote>
-            <h3 id="shri-ramdeobaba-college-of-engineering-and-management-nagpur-wwwrknecedu">Concordia University, Montreal, Canada <br> <a href="https://www.concordia.ca">www.concordia.ca</a></h3>
+            <h3 id="shri-ramdeobaba-college-of-engineering-and-management-nagpur-wwwrknecedu">Concordia University,
+                Montreal, Canada <br> <a href="https://www.concordia.ca">www.concordia.ca</a></h3>
             <h4 id="2017-2021">Fall 2022-present</h4>
+            <h3 id="certifications">Certifications:</h3>
+            <blockquote>
+                <h4>Ethical Hacking(LinkedIn Learning): 
+                    <blockquote>
+                        <a href="https://www.linkedin.com/learning/certificates/fffa9c7762c83d0085abf91c33d60bd1119004bd4bb2c7a5f911a5c0ae4e06ae?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3BJl1a95LgTzqAA2UiEonuIA%3D%3D">Introduction to Ethical Hacking</a><br>
+                        <a href="https://www.linkedin.com/learning/certificates/1c0fc562c9b41bf94103135c168858accec27a66c047075824b890fbf1397226?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3BJl1a95LgTzqAA2UiEonuIA%3D%3D">Footprinting and Reconnaissance</a><br> 
+                        <a href="https://www.linkedin.com/learning/certificates/81f3767873d1c67ca0a69da9efe7c37748d3e3588b1accf1eee452d89567be02?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3BJl1a95LgTzqAA2UiEonuIA%3D%3D">Scanning Networks</a><br>
+                    </blockquote>
+                </h4>
+                <h4><a href="https://coursera.org/verify/WEE6GAR7UUJM">Foundations of Cybersecurity - Google @ Coursera</a></h4>
+
+            </blockquote>
         </blockquote>
+
+
         <h2 id="be-in-electronics-and-communication-cgpa-827">BE in Electronics and Communication (C.G.P.A: 8.27)</h2>
         <blockquote>
             <h3 id="shri-ramdeobaba-college-of-engineering-and-management-nagpur-wwwrknecedu">Shri Ramdeobaba College of
                 Engineering and Management, Nagpur <a href="https://www.rknec.edu">www.rknec.edu</a></h3>
             <h4 id="2017-2021">2017-2021</h4>
             <blockquote>
-                <h3 id="complete-course-details"><a
-                        href="./assets/BE Electronic and Comunication 2016.pdf">Complete
+                <h3 id="complete-course-details"><a href="./assets/BE Electronic and Comunication 2016.pdf">Complete
                         course details</a></h3>
             </blockquote>
-        </blockquote>
-
-        <blockquote>
             <h3 id="certifications">Certifications:</h3>
             <blockquote>
-                <h4 id="pph526x-using-python-for-research-offered-by-harvardx--edx">PPH526x: Using Python for Research
-                    offered by HarvardX – edX</h4>
-                <h4 id="automate-the-boring-stuff-with-python---udemy">Automate the Boring Stuff with Python - Udemy
+                <h4 id="complete-python-hacking--udemy"><a
+                        href="https://www.udemy.com/certificate/UC-89e6229d-bdd3-4de9-95c2-1f81667d78a7/">The Complete
+                        Python Hacking Course: Beginner to Advanced – Udemy</a></h4>
+                <h4 id="pph526x-using-python-for-research-offered-by-harvardx--edx"><a
+                        href="https://courses.edx.org/certificates/7ffe5a27c7c146499dbac85113aa2f7a">PPH526x: Using
+                        Python for
+                        Research
+                        offered by HarvardX – edX</a></h4>
+                <h4 id="automate-the-boring-stuff-with-python---udemy"><a
+                        href="https://www.udemy.com/certificate/UC-c8f68d3e-7ecc-4125-ae7c-a0a691058c39/">Automate the
+                        Boring Stuff with Python - Udemy</a>
                 </h4>
-                <h4 id="python-bootcamp---udemy">Python Bootcamp - Udemy</h4>
-                <h4 id="programming-with-google-go-getting-started---coursera">Programming with Google Go: Getting
-                    Started - Coursera</h4>
-                <h4 id="introduction-to-self-driving-cars---coursera">Introduction to Self-Driving Cars - Coursera</h4>
-                <h4 id="matlab-onramp---mathworks">MATLAB Onramp - MathWorks</h4>
+                <h4 id="python-bootcamp---udemy">
+                    <a href="http://ude.my/UC-DSOTUFXB">Python Bootcamp - Udemy</a>
+                </h4>
+                <h4 id="programming-with-google-go-functions---coursera">
+                    <a href="https://www.coursera.org/account/accomplishments/certificate/GKJZFA75JRKV">Programming
+                        with Google Go: Functions, Methods, and Interfaces in Go - Coursera</a>
+                </h4>
+                <h4 id="programming-with-google-go-getting-started---coursera">
+                    <a href="https://www.coursera.org/account/accomplishments/certificate/PFGPES76DHKS">Programming
+                        with Google Go: Getting
+                        Started - Coursera</a>
+                </h4>
+                <h4 id="introduction-to-self-driving-cars---coursera"><a
+                        href="https://www.coursera.org/account/accomplishments/certificate/KBBCXDCY6VFP">Introduction to
+                        Self-Driving Cars - Coursera
+                    </a> </h4>
+                <h4 id="matlab-onramp---mathworks"><a
+                        href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=d4e40c84-d281-4870-8d5d-38c82875ad73">MATLAB
+                        Onramp - MathWorks</a></h4>
             </blockquote>
         </blockquote>
 
