--- a/projects.html
+++ b/projects.html
@@ -48,24 +48,16 @@
     <h1 id="software-development-projects">Software Development Projects</h1>
     <blockquote>
       <h2 id="library-management-system"><u>Library Management System</u></h2>
-      <h3 id="project-done-under-artech-innovations">Project done under ArTech Innovations</h3>
-      <h3 id="based-on-htmlcss-for-frontend-and-django-postgresql-for-the-backend">Based on HTML,CSS for frontend and
-        Django, PostgreSQL for the backend.</h3>
+      <h3 id="project-done-under-artech-innovations">Project done under ArTech Innovations to develop a library management system to help transition schools to an online medium.</h3>
+      <h3 id="based-on-htmlcss-for-frontend-and-django-postgresql-for-the-backend">Django based webapp.</h3>
     </blockquote>
 
     <blockquote>
-      <h2 id="frontend-hotel-website"><u>Frontend Hotel Website</u></h2>
-      <h3 id="this-is-was-my-first-hands-on-experience-to-using-html-and-css-to-design-a-html-css-based-website">This is
-        was my first hands on experience to using HTML and CSS to design a HTML-CSS based website.</h3>
-      <blockquote>
-        <h3 id="take-a-look-here">Take a look <a href="/projects/abchotels/">here</a></h3>
-      </blockquote>
-    </blockquote>
-
-    <blockquote>
-      <h2 id="mini-automation-scripts">Mini-Automation Scripts</h2>
+      <h2 id="mini-automation-scripts">Automation Scripts</h2>
       <h3 id="creating-a-list-of-automation-programs-here-to-simplify-daily-tasks">Creating a list of Automation
         programs here to simplify daily tasks</h3>
+      I started off with writing a simple script for joining a Google Meet on a fixed schedule. Well, once you
+      <h3>createYourOwnTask - I str</h3>
       <blockquote>
         <h3 id="take-a-look-here-1">Take a look <a href="https://github.com/adivardhan1000/automation-scripts">here</a>
         </h3>
