test new feature

--- a/index.html
+++ b/index.html
@@ -63,8 +63,18 @@
       in Python cuz why not!(and also because it was a POC) :) <br>
     </p>
   </main>
+  
   <section class="main-content">
-
+    <section class="main-content">
+      <div class="feed-panel">
+        <h3>Feed</h3>
+        <div id="feed-list">
+          <!-- Add the feed items here -->
+          <div class='feed-item'>Testing feed 1</div>
+          <div class='feed-item'>Testing feed 2</div>
+        </div>
+      </div>
+    </section>
     <footer class="site-footer">
       <div class="main-content" style="font-size:30px" align="center">
         <a target="_blank" href="https://bit.ly/adivardhan_linkedin" class="fa fa-linkedin"></a>
