--- a/blogs.html
+++ b/blogs.html
@@ -47,6 +47,21 @@
 
 <body>
 
+    <section class="page-header">
+        <img src="images/Blogs.svg" alt="Blog" align="center" width="100%"><br>
+        <!--<h2 class="project-tagline">Website in development.</h2>
+
+    <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
+    <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
+    -->
+        <a href="/" class="btn">Home</a>
+        <a href="/education.html" class="btn">Education</a>
+        <a href="/projects.html" class="btn">Projects</a>
+        <a href="/blogs.html" class="btn">Blogs</a>
+        <a href="/contact.html" class="btn">Contact Me</a>
+    </section>
+
+    <main id="content" class="main-content" role="main">    
     
     <p>Hello, I am Adivardhan Maheshwari. This is my personal website. I've decided to remove all analytics as I value
       the privacy of my visitors. However, I appreciate knowing when someone has visited my website. So, I'm working on
@@ -88,22 +103,9 @@
       deploying code and running scripts and don't want to deal with network restrictions.) Guess what - Most of it was
       in Python cuz why not!(and also because it was a POC) :) <br>
     </p>
-    <section class="page-header">
-        <img src="images/Blogs.svg" alt="Blog" align="center" width="100%"><br>
-        <!--<h2 class="project-tagline">Website in development.</h2>
-
-    <a href="https://github.com/adivardhan1000/adivardhan/zipball/master" class="btn">Download .zip</a>
-    <a href="https://github.com/adivardhan1000/adivardhan/tarball/master" class="btn">Download .tar.gz</a>
-    -->
-        <a href="/" class="btn">Home</a>
-        <a href="/education.html" class="btn">Education</a>
-        <a href="/projects.html" class="btn">Projects</a>
-        <a href="/blogs.html" class="btn">Blogs</a>
-        <a href="/contact.html" class="btn">Contact Me</a>
-    </section>
 
     <div id="feed"></div>
-
+</main>
     <script>
         // URL of the JSON feed
         const JSON_URL = 'https://api.rss2json.com/v1/api.json?rss_url=https://medium.com/feed/@adivardhan';
