move stuff around and renaming

--- a/blogs.html
+++ b/blogs.html
@@ -57,7 +57,7 @@
         <a href="/" class="btn">Home</a>
         <a href="/education.html" class="btn">Education</a>
         <a href="/projects.html" class="btn">Projects</a>
-        <a href="/blogs.html" class="btn">Blogs</a>
+        <a href="/blogs.html" class="btn">Blogs and About me</a>
         <a href="/contact.html" class="btn">Contact Me</a>
     </section>
 
