--- a/education.html
+++ b/education.html
@@ -33,7 +33,7 @@
         <a href="/" class="btn">Home</a>
         <a href="/education.html" class="btn">Education</a>
         <a href="/projects.html" class="btn">Projects</a>
-        <a href="/blogs.html" class="btn">Blogs</a>
+        <a href="/blogs.html" class="btn">My journey and blogs</a>
         <a href="/contact.html" class="btn">Contact Me</a>
     </header>
 
